logs/reversecoin.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/leveldb-0.194.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/reversecoin'...
Listing './lib/python3.5/site-packages/reversecoin/bitcoin'...
Compiling './lib/python3.5/site-packages/reversecoin/bitcoin/utils.py'...
***   File "./lib/python3.5/site-packages/reversecoin/bitcoin/utils.py", line 85
    print "Not implemented >>>>>>>>>>>>>>>>>>>"
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/reversecoin/bitcoinrpc'...
Compiling './lib/python3.5/site-packages/reversecoin/chaindb.py'...
***   File "./lib/python3.5/site-packages/reversecoin/chaindb.py", line 44
    def __init__(self, blkhash=0L, spentmask=0L):
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/reversecoin/connection.py'...
***   File "./lib/python3.5/site-packages/reversecoin/connection.py", line 49
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/reversecoin/data'...
Compiling './lib/python3.5/site-packages/reversecoin/mempool.py'...
***   File "./lib/python3.5/site-packages/reversecoin/mempool.py", line 52
    print "txhash: {0}".format(txhash)
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/reversecoin/miner'...
Compiling './lib/python3.5/site-packages/reversecoin/miner/miner.py'...
***   File "./lib/python3.5/site-packages/reversecoin/miner/miner.py", line 35
    MAX_NONCE = 1000000000000L
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/reversecoin/rpc.py'...
***   File "./lib/python3.5/site-packages/reversecoin/rpc.py", line 58
    return x & 0xffffffffL
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/reversecoin/transaction.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (transaction.py, line 185)
Compiling './lib/python3.5/site-packages/reversecoin/version.py'...
***   File "./lib/python3.5/site-packages/reversecoin/version.py", line 15
    print VERSION
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/reversecoin/wallet'...
Compiling './lib/python3.5/site-packages/reversecoin/wallet/account.py'...
***   File "./lib/python3.5/site-packages/reversecoin/wallet/account.py", line 7
    print "Address: ", subaccount['address']
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/reversecoin/wallet/balance.py'...
***   File "./lib/python3.5/site-packages/reversecoin/wallet/balance.py", line 8
    print subaccount['address']  + ": ", subaccount['balance']
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/reversecoin/wallet/getvaults.py'...
***   File "./lib/python3.5/site-packages/reversecoin/wallet/getvaults.py", line 6
    print "Vault Address:", vault
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/reversecoin/wallet/info.py'...
***   File "./lib/python3.5/site-packages/reversecoin/wallet/info.py", line 12
    print "Blocks: %i" % info.blocks
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/reversecoin/wallet/newaddress.py'...
***   File "./lib/python3.5/site-packages/reversecoin/wallet/newaddress.py", line 6
    print address
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/reversecoin/wallet/p2sh_send.py'...
***   File "./lib/python3.5/site-packages/reversecoin/wallet/p2sh_send.py", line 9
    print sys.argv
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/reversecoin/wallet/received.py'...
***   File "./lib/python3.5/site-packages/reversecoin/wallet/received.py", line 14
    print count
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/reversecoin/wallet/rwallet.py'...
***   File "./lib/python3.5/site-packages/reversecoin/wallet/rwallet.py", line 68
    print address
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/reversecoin/wallet/sample.py'...
***   File "./lib/python3.5/site-packages/reversecoin/wallet/sample.py", line 7
    except InsufficientFunds,e:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/reversecoin/wallet/savings.py'...
***   File "./lib/python3.5/site-packages/reversecoin/wallet/savings.py", line 6
    print vault  + ": ", vaults[vault]['balance']
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/reversecoin/wallet/send.py'...
***   File "./lib/python3.5/site-packages/reversecoin/wallet/send.py", line 17
    print "Transferring: ", amount, " \tto: ", toaddress
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/reversecoin/wallet/vault_fast_withdraw.py'...
***   File "./lib/python3.5/site-packages/reversecoin/wallet/vault_fast_withdraw.py", line 10
    print "Id: ", n, vault['name']  + ": ", vault['balance']
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/reversecoin/wallet/vault_override.py'...
***   File "./lib/python3.5/site-packages/reversecoin/wallet/vault_override.py", line 11
    print "\tId: ", n
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/reversecoin/wallet/vault_pending.py'...
***   File "./lib/python3.5/site-packages/reversecoin/wallet/vault_pending.py", line 10
    print txouts['toaddress'] + ": ", txouts['amount']
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/reversecoin/wallet/vault_send.py'...
***   File "./lib/python3.5/site-packages/reversecoin/wallet/vault_send.py", line 19
    print count, ":", vault + " ", vaults[vault]['balance']
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/reversecoin/wallet/vault_withdraw.py'...
***   File "./lib/python3.5/site-packages/reversecoin/wallet/vault_withdraw.py", line 10
    print "Id: ", n, vault['name']  + ": ", vault['balance']
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/reversecoin-0.0.7.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
